<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/icon"
            android:layout_weight="1"
            android:text="@string/gallery" />

        <ImageView
            android:id="@+id/icon_notification"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/notification" />

        <ImageView
            android:id="@+id/icon_search"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/search" />

        <ImageView
            android:id="@+id/icon_more"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/main_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/main_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/main_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list"
        android:orientation="vertical"
        />



</LinearLayout>